--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
     <h3>Contact Form</h3>
 
     <div class="container">
-    <form action="https://getform.io/f/0bbecd18-bb5a-4eef-8ae2-f9ffcb50b6c6" method="POST">
+    <form action="https://facebook.com/mistblitz" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="your name">
 
