--- a/sponsorships.html
+++ b/sponsorships.html
@@ -97,7 +97,7 @@
    <!-- Why sponsor us -->   
         <div class="sponsors2">
             <!-- <h1 class="Title" id="currentSponsors">Sponsor Us</h1> -->
-            <!-- <img src="" class="sponsorGEMLogo" id="whySponsor"> -->
+            <img src="img/mist_blitz.png" class="sponsorGEMLogo" id="whySponsor">
             <p class="adblock" style="text-align:left; padding: 2vh 10vw 5vh 10vw;">
                 As a university team we seek assistance from whoever would like to help us out. We try to fabricate all our parts and components that go into our project in house but there are some processes we cannot perform due to the need of certain on-campus resources aside from what we have. Any contributions would be greatly appreciated including materials, processes or necessities for the team’s goal which is to compete in the Formula SAE Collegiate Series Competition.
             </p>
