--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <div id = "team" class="officers1">
       <h1 class="team-title Title">MEET OUR TEAM</h1>
-      <img class="club-logo" src="img/team.jpg">
+      <img class="club-logo" src="img/mist_blitz.png">
       <div class="flex-parent jc-center">
         <button class="button-29 margin-right" role="button" onclick="window.open('team.html', '_blank');">Our Team</button>
       </div>
