--- a/team.html
+++ b/team.html
@@ -428,7 +428,7 @@ Commenting out members under review
                 <a href="sponsorships.html">Sponsors</a>
             </li>
             <li>
-                <a href="team.html">Current Team</a>
+                <a href="team.html">Our Team</a>
             </li>
             <li>
                 <a href="gallery.html">Gallery</a>
