--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 <a id="sponsorsButton" class = "uk-visible@m" href="sponsorships.html">Sponsors</a>
               </li>
               <li>
-                <a id="currentTeamButton" class = "uk-visible@m" href="team.html">Current Team</a>
+                <a id="currentTeamButton" class = "uk-visible@m" href="team.html">Our Team</a>
               </li>
               <li>
                 <a id="galleryButton" class = "uk-visible@m" href="gallery.html">Gallery</a>
