--- a/sponsorships.html
+++ b/sponsorships.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width = device-width, initial-scale=1">
-        <meta name="description" content="Welcome to the official CSULA FSAE website!">
+        <meta name="description" content="Welcome to the official MIST BLITZ FSAE">
         <meta name="robots" content = "index, follow">
     
     <!--favicon-->
