--- a/sponsorships.html
+++ b/sponsorships.html
@@ -56,7 +56,7 @@
     <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
         <nav class="uk-navbar-container" uk-navbar>
           <div class="uk-navbar-left" uk-scrollspy-nav="scroll: true; offset: 500;">
-            <a href="https://goldeneaglemotorsports.github.io/website/"><img class="uk-navbar-item uk-logo" src="img/mist_blitz.png"></a>
+            <a href="https://nasim2me.github.io/page/"><img class="uk-navbar-item uk-logo" src="img/mist_blitz.png"></a>
             <img style = "height:70px;" src = "">
           </div>
           <div class="uk-navbar-right">
