--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial-scale=1">
-    <meta name="description" content="Welcome to the official CSULA FSAE website!">
+    <meta name="description" content="Welcome to the MIST BLITZ FSAE Team Bangladesh">
     <meta name="robots" content = "index, follow">
     <title>GALLERY | MIST BLITZ</title>
 
@@ -48,7 +48,7 @@
     <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
         <nav class="uk-navbar-container" uk-navbar>
           <div class="uk-navbar-left" uk-scrollspy-nav="scroll: true; offset: 500;">
-              <a href="index.html"><img class="uk-navbar-item uk-logo" src="img/mist_blitz.png"></a>
+              <a href="https://nasim2me.github.io/page/"><img class="uk-navbar-item uk-logo" src="img/mist_blitz.png"></a>
             <img style = "height:70px;" src = "">
           </div>
           <div class="uk-navbar-right">
