--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,15 @@
     </div>
 
     <!-- Instagram Feed via Curator.io -->
-    https://app.curator.io/connection/a/com_4pwg4j158wg3
+     <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"></a></div>
+    <script type="text/javascript">
+        /* curator-feed-default-feed-layout */
+        (function(){
+        var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+        i.src="https://app.curator.io/connection/a/com_4pwg4j158wg3";
+        e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+        })();
+    </script>
 
     <!-- footer/contact us -->
 
