--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,7 @@
         /* curator-feed-default-feed-layout */
         (function(){
         var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
-        i.src="https://app.curator.io/connection/a/com_4pwg4j158wg3";
+        i.src="";
         e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
         })();
     </script>
