--- a/gallery.html
+++ b/gallery.html
@@ -81,19 +81,14 @@
     </div>
 
     <!-- Instagram Feed via Curator.io -->
-<!-- Place <div> tag where you want the feed to appear -->
-<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"></a></div>
-
-<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+<div id="curator-feed-default-feed-layout"><a href="" target="_blank" class="crt-logo crt-tag"></a></div>
 <script type="text/javascript">
-/* curator-feed-default-feed-layout */
 (function(){
 var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
 i.src="https://cdn.curator.io/published/3943d209-6dad-455f-9763-5b3eb259e3c6.js";
 e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 })();
 </script>
-
     <!-- footer/contact us -->
 
     <div class="footer">
